# aurora

./: .editorconfig  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.changeset/: README.md  config.json
.cursor/rules/: aurobore-project.mdc  aurora-dev-toolkit.mdc  aurora-ui-kit.mdc  demo-verification.mdc  git-workflow.mdc
.github/workflows/: ci.yml  docs.yml
.pack-smoke/: aurobore-build-0.0.0.tgz  aurobore-build-0.0.2.tgz  aurobore-cli-0.0.0.tgz  aurobore-cli-0.0.2.tgz  aurobore-core-0.0.0.tgz  aurobore-core-0.0.2.tgz  aurobore-runtime-0.0.0.tgz  aurobore-runtime-0.0.2.tgz
docs/: README.md  alpha-plan.md  alpha-plugins-plan.md  checklists.md  glossary.md  improvements-plan.md  index.md  mvp-plan.md  repository-structure.md  requirements.md  roadmap.md  task.txt  vision.md
docs/.vitepress/: audience.ts  config.ts  sidebar.ts
docs/adr/: ADR-000-template.md  ADR-001-runtime-architecture.md  ADR-002-bridge-model.md  ADR-003-plugin-api.md  ADR-004-webview-engine-abstraction.md  ADR-005-cli-stack.md  ADR-006-configuration-format.md  ADR-007-packaging-build.md  ADR-008-typescript-sdk-codegen.md  ADR-009-naming.md  ADR-010-w3c-polyfills.md  ADR-011-camera-frame-channel.md  ADR-012-ota-live-updates.md  README.md
docs/agents/: README.md
docs/api/: README.md  cover.md
docs/architecture/: README.md  bridge.md  build-system.md  cli.md  configuration.md  dev-server.md  event-system.md  native-sdk.md  plugin-loader.md  plugin-system.md  runtime.md  typescript-sdk.md
docs/aurora/: README.md  app-development.md  build-and-packaging.md  compatibility-matrix.md  glossary.md  requirements-and-conventions.md  sandbox-and-permissions.md  sdk-overview.md  sources.md  tooling.md  ui-kit.md  verification-status.md  webview.md
docs/dev/: README.md  adding-a-plugin.md  e2e-testing.md  native-debugging.md  native-plugin-guide.md  ota-updates.md  w3c-polyfills.md  web-debugging.md  web-mock-mode.md  webview-improvements-plan-plus.md  webview-improvements-plan.md
docs/plugins/: README.md  camera.md  clipboard.md  device.md  echo.md  filesystem.md  geolocation.md  network.md  notifications.md  plugin-api.md  sensors.md  share.md  standard-plugins.md  storage.md
docs/rfc/: README.md  RFC-000-template.md  RFC-001-w3c-polyfills.md  RFC-002-ota-live-updates.md
docs/tutorials/: README.md  cover.md  deep-links.md  demo-existing-app.md  events-and-lifecycle.md  framework-templates.md  immersive-ui.md  quick-start.md  using-plugins.md  writing-a-plugin.md
examples/: README.md
examples/camera-demo/: README.md  aurobore.config.json  package.json
examples/geo-demo/: README.md  aurobore.config.json  package.json
examples/hello-world/: README.md  aurobore.config.json  package.json  tsconfig.json
examples/hello-world-stub/: README.md  aurobore.config.json
examples/hybrid-demo/: README.md  aurobore.config.json
examples/notifications-demo/: README.md  aurobore.config.json  package.json
examples/ota-demo/: .gitignore  README.md  aurobore.config.json  package.json
examples/react-demo/: README.md  aurobore.config.json  index.html  package.json
examples/sensors-demo/: README.md  aurobore.config.json  package.json
examples/share-demo/: README.md  aurobore.config.json  package.json
examples/svelte-demo/: README.md  aurobore.config.json  index.html  package.json  vite.config.ts
examples/vue-demo/: README.md  aurobore.config.json  index.html  package.json  vite.config.ts
examples/w3c-demo/: aurobore.config.json  package.json
examples_external/: README.md  manifest.json
plugins/: README.md
plugins/camera/: package.json  plugin.manifest
plugins/clipboard/: package.json  plugin.manifest
plugins/device/: package.json  plugin.manifest
plugins/echo/: package.json  plugin.manifest
plugins/filesystem/: package.json  plugin.manifest
plugins/geolocation/: package.json  plugin.manifest
plugins/network/: package.json  plugin.manifest
plugins/notifications/: package.json  plugin.manifest
plugins/sensors/: package.json  plugin.manifest
plugins/share/: package.json  plugin.manifest
plugins/storage/: package.json  plugin.manifest
runtime/: README.md
runtime/bridge-native/: BridgeRouter.cpp  BridgeRouter.h  (+3 more)
runtime/container/: CMakeLists.txt  README.md  ru.auroraos.aurobore-container.desktop
runtime/container/config/: defaults.json
runtime/container/html/: index.html
runtime/container/html/css/: app.css  aurobore-chrome.css
runtime/container/html/js/: app.js  aurobore-bridge-web.js  aurobore-bridge.js  aurobore-plugins.js  aurobore-polyfills.js  aurobore-web-shim.js
runtime/container/qml/: ru.auroraos.aurobore-container.qml
runtime/container/qml/components/: AuroboreWebView.qml  HttpAuthDialog.qml  SplashScreen.qml  WebViewCookieOrchestrator.qml
runtime/container/qml/cover/: DefaultCover.qml  PreviewCover.qml
runtime/container/qml/logic/: BridgeMessages.js  UrlPolicy.js  WebChrome.js
runtime/container/qml/pages/: CameraCapturePage.qml  PickPhotoPage.qml  ShareSheetPage.qml  WebAppPage.qml
runtime/container/qml/verification/: WebViewVerificationHost.qml  WebViewW3ExternalHarness.qml  WebViewW4AuthHarness.qml  WebViewW5CookieHarness.qml  WebViewW6DisposeHarness.qml
runtime/container/rpm/: ru.auroraos.aurobore-container.spec
runtime/container/src/: AppConfig.cpp  AppConfig.h  AssetResolver.cpp  AssetResolver.h  AssetSchemeServer.cpp  AssetSchemeServer.h  CoverBridge.cpp  CoverBridge.h  CoverPlugin.cpp  UpdateManager.cpp  UpdateManager.h  UpdatesPlugin.cpp  UpdatesPlugin.h  WebViewAuthBridge.cpp  WebViewAuthBridge.h  WebViewCookieBridge.cpp  WebViewCookieBridge.h  WebViewPlugin.cpp  WebViewPlugin.h  main.cpp  webview_subprocess_main.cpp
runtime/container/translations/: ru.auroraos.aurobore-container-ru.ts  ru.auroraos.aurobore-container.ts
scripts/: bump-version.mjs  check-npm-publish.mjs
templates/: README.md
tests/: README.md
tools/: README.md
(+250 files in other folders)
